--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 					<p><strong>Welcome to freenhlstream.com</strong> – your dedicated hub for live hockey action! Here, we bring fans closer to the ice with free, high-quality streams of the NHL, KHL, and other major hockey leagues and tournaments. No need for expensive subscriptions or complicated sign-ups—just click, watch, and enjoy the game. Our platform is designed to make it easy for fans like you to catch every thrilling play, goal, and overtime moment, anytime and on any device. So settle in, pick your game, and let the excitement of live hockey streaming bring you closer to the sport you love. <strong>Enjoy the action on freenhlstream.com!</strong></p>
 					
-					<img src="https://nhlwebcast.pages.dev/nhl-webcast.jpg" alt="poster" width="500" height="285" />
+					<img src="/nhl-webcast.jpg" alt="poster" width="500" height="285" />
 					
 					<h2>What is freenhlstream.com?</h2>
 				    	<p><strong>freenhlstream.com</strong> provides high-quality, free streaming of hockey games across leagues like the NHL, KHL, and international tournaments. This platform caters to fans by offering access without costly subscriptions or cable packages, and no sign-up is required. This accessibility aims to bring hockey action to everyone, regardless of location or budget.</p>    
