--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
 	<meta property="og:image" content="/nhl-webcast.jpg">
+	
+	
 	<script>document.addEventListener("DOMContentLoaded", () => {
     // Select all elements with the class "bntl"
     document.querySelectorAll(".bntl").forEach(element => {
         // Add a click event listener to each element
         element.addEventListener("click", () => {
             // Open the specified URL in a new tab with added security
-            window.open("https://free nhl streams/", "_blank", "noopener");
+            window.open("https://freenhlstream.com/", "_blank", "noopener");
         });
     });
 });
