--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="content">
 		<div class="container">
 			<div class="header">
-				<h2><a href="https://free nhl streams/">Free NHL Stream</a></h2>
+				<h2><a href="https://freenhlstream.com/">Free NHL Stream</a></h2>
 				<h1>free nhl streams |Free NHL Streams - High Quality Stream</h1>				
 			</div>
 			<div class="main">
